Add opening hours section to index.html

--- a/index.html
+++ b/index.html
@@ -36,6 +36,21 @@
     <i class="fa-solid fa-calendar-check"></i> Réserver via Booksy
   </a>
 </section>
+  
+<section class="hours">
+  <div class="container">
+    <h2>Horaires d’ouverture</h2>
+    <ul>
+      <li><span>Lundi</span><span>09h00 – 19h00</span></li>
+      <li><span>Mardi</span><span>09h00 – 19h00</span></li>
+      <li><span>Mercredi</span><span>09h00 – 19h00</span></li>
+      <li><span>Jeudi</span><span>09h00 – 19h00</span></li>
+      <li><span>Vendredi</span><span>09h00 – 20h00</span></li>
+      <li><span>Samedi</span><span>09h00 – 18h00</span></li>
+      <li class="closed"><span>Dimanche</span><span>Fermé</span></li>
+    </ul>
+  </div>
+</section>
 
 <section id="services">
   <h2>Nos Services & Tarifs</h2>
