Update index.html with new hours and services
Updated opening hours and service prices with emojis. Added reservation section with links to Booksy and Google reviews. Enhanced contact information with full address.

--- a/index.html
+++ b/index.html
@@ -55,20 +55,22 @@
         <li><span>Mercredi</span><span>09h – 19h</span></li>
         <li><span>Jeudi</span><span>09h – 19h</span></li>
         <li><span>Vendredi</span><span>09h – 20h</span></li>
-        <li><span>Samedi</span><span>09h – 18h</span></li>
-        <li class="closed"><span>Dimanche</span><span>Fermé</span></li>
+        <li><span>Samedi</span><span>09h – 19h</span></li>
+        <li><span>Dimanche</span><span>09h30 – 15h</span></li>
       </ul>
     </div>
 
     <div class="infos-box">
       <h2>Tarifs</h2>
       <ul>
-        <li><span>Coupe</span><span>15€</span></li>
-        <li><span>Barbe</span><span>10€</span></li>
-        <li><span>Coupe + Barbe</span><span>20€</span></li>
-        <li><span>Soin visage</span><span>15€</span></li>
-        <li><span>Enfant</span><span>13€</span></li>
-        <li><span>Buzz Cut</span><span>13€</span></li>
+        <li><span>✂️ Coupe</span><span>15€</span></li>
+        <li><span>🧔 Taille de barbe</span><span>10€</span></li>
+        <li><span>💈 Coupe + barbe</span><span>20€</span></li>
+        <li><span>💆 Soin visage</span><span>15€</span></li>
+        <li><span>✂️ Coupe Enfant</span><span>13€</span></li>
+        <li><span>💈 Buzz Cut</span><span>13€</span></li>
+        <li><span>🧔 Rasage</span><span>10€</span></li>
+        <li><span>💈 Taoer</span><span>10€</span></li>
       </ul>
     </div>
 
@@ -117,25 +119,51 @@
   <h2>Galerie</h2>
   <div class="gallery">
     <img src="image/salon1.jpg">
-    <img src="image/salon2.jpg">
+    <img src="image/Salon2.JPEG">
     <img src="image/salon3.jpg">
   </div>
 </section>
 
+<section id="reservation">
+  <h2>Réserver un créneau</h2>
+
+  <!-- BOUTON BOOKSY -->
+  <p style="text-align:center; margin-bottom:20px;">
+    <a href="https://booksy.com/fr-fr/65816_star-barbershop_barbier_93877_mourmelon-le-grand#ba_s=vl_1" 
+       target="_blank" class="btn">
+      <i class="fa-solid fa-calendar-check"></i> Réserver via Booksy
+    </a>
+  </p>
+  
+  <!-- BOUTON GOOGLE -->
+  <p style="text-align:center; margin-bottom:30px;">
+  <a href="https://www.google.com/search?sca_esv=d878df9cdf7e300a&hl=fr-FR&sxsrf=AE3TifOtWAe8wSJEruWNYzT08DzWLHdNfg:1765375985485&q=avis+sur+star+barbershop+12+rue+du+mar%C3%A9chal+foch,+mourmelon+le+grand+51400&uds=AOm0WdE2fekQnsyfYEw8JPYozOKzxHMOwXVAFWx4Mz00mQGTmOs_ksQVpt8gNbq3zh_rBa4MpFqy_KUNdvz9AgSrcVmbvpNWzB7eRibnafWlBk8dhtcoqlYnYigmJIPnqQB7SAi-ElT75siT52feo3eX1IY7ZqQBVctrD_k0NI-0zImIDhME4f-JRjOTKm-EcP0kE2cXdeb8W_is_QVVm3MucWFlhxBTRLicYn7outZWWkw8RoNvPOgFbtygUJYTPFAjMF6-EqwECsMIJk0YUk-z8KkvHWulU3BK-LOTdTcdUDodykFOlzY&si=AMgyJEtREmoPL4P1I5IDCfuA8gybfVI2d5Uj7QMwYCZHKDZ-E8IsiJd_e90cBSiYF1cUXCbCg6tuwX2mjKIs6XlR6xy1bNoQY4KM8BP7eOTt7du8ak7cPXG6Sh8xcSc1pWs3MKTGtPzLT-XVvmhnyNNqTMWYO7G59dV_PcuJAxjxR_la0qBVaGP57U4BNf2sZqpLjzsrVGlFKUVtZnu2vGP6FM4ONWtoAw%3D%3D&sa=X&ved=2ahUKEwjX8ImEmrORAxUqXaQEHfEuB0kQxKsJKAB6BAgREAE&ictx=1&stq=1&cs=1&lei=8X85aZe0Haq6kdUP8d2cyAQ" 
+     target="_blank" 
+     class="btn google-btn">
+    <i class="fa-brands fa-google"></i> Voir les avis Google
+  </a>
+</p>
+</section>
+
 <!-- CONTACT -->
 <section id="contact">
-  <h2>Contact</h2>
-  <p>📍 12 Rue du Maréchal Foch, Mourmelon-le-Grand</p>
+  <h2>Contact & Localisation</h2>
+  <p>📍12 Rue du Maréchal Foch, 51400, Mourmelon-le-Grand</p>
   <p>📞 09 82 33 27 02</p>
+  <p>✉️ info@starbarbershop.fr</p>
 
   <iframe
-    src="https://www.google.com/maps/embed?pb=!1m18..."
-    width="100%" height="250" style="border:0;" loading="lazy">
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2625.9782577027173!2d4.331187715674146!3d49.19836187933301!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e5d7b62d051d95%3A0xfbd89a15d2e07f0f!2s12%20Rue%20du%20Mar%C3%A9chal%20Foch%2C%2051400%20Mourmelon-le-Grand!5e0!3m2!1sfr!2sfr!4v1702212961234!5m2!1sfr!2sfr"
+    width="100%" 
+    height="250" 
+    style="border:0;" 
+    allowfullscreen="" 
+    loading="lazy">
   </iframe>
 </section>
 
 <footer>
-  © 2025 Star Barbershop
+  <p>© 2025 Star Barbershop - Tous droits réservés.</p>
 </footer>
 
 <script src="script.js"></script>
