Update image file extensions in galerie section

--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
 <section id="galerie">
   <h2>Galerie</h2>
   <div class="gallery">
-    <img src="image/salon1.jpg">
+    <img src="image/salon1.JPEG">
     <img src="image/Salon2.JPEG">
-    <img src="image/salon3.jpg">
+    <img src="image/salon3.JPEG">
   </div>
 </section>
 
