Fix image source case for salon2 image

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   <h2>Galerie</h2>
   <div class="gallery">
     <img src="image/Salon1.JPEG">
-    <img src="image/salon2.JPEG">
+    <img src="image/Salon2.JPEG">
     <img src="image/salon3.JPEG">
   </div>
 </section>
